intern/cycles/kernel/kernels/opencl/kernel_state_buffer_size.cl
@@ -21,7 +21,7 @@ __kernel void kernel_ocl_path_trace_state_buffer_size(
         KernelGlobals *kg,
         ccl_constant KernelData *data,
         uint num_threads,
-        ccl_global uint *size)
+        ccl_global uint64_t *size)
 {
 	kg->data = data;
 	*size = split_data_buffer_size(kg, num_threads);
